# firm-networks-generation

./: .coverage.Luca-M3.42395.XjGYZPTx  .cursorrules  .gitignore  README.md  pyproject.toml
data/national_io_tables_history/: ARG.pkl  AUS.pkl  AUT.pkl  BEL.pkl  BGR.pkl  BRA.pkl  BRN.pkl  CAN.pkl  CHE.pkl  CHL.pkl  CHN.pkl  COL.pkl  CRI.pkl  CYP.pkl  CZE.pkl  DEU.pkl  DNK.pkl  ESP.pkl  EST.pkl  FIN.pkl  FRA.pkl  GBR.pkl  GRC.pkl  HKG.pkl  HRV.pkl  HUN.pkl  IDN.pkl  IND.pkl  IRL.pkl  ISL.pkl  ISR.pkl  ITA.pkl  JPN.pkl  KAZ.pkl  KHM.pkl  KOR.pkl  LAO.pkl  LTU.pkl  LUX.pkl  LVA.pkl  (+25 more)
data/oecd/meta_data/: national_iot_country_list.csv  oecd_industry_sector_list.csv
network_generation/: __main__.py  data.py  hill_exponent.py  losses.py  model.py  parse_config.py  stats.py  train.py
scripts/: example-video.py  example.py  terminate_with_smoothness.py
scripts/utils/: analysis.py  direct_checkpoint.py  video_recorder.py  viz.py
tests/: test_data.py  test_hill_exponent.py  test_losses.py  test_model.py  test_parse_config.py  test_stats.py  test_train.py
tests/test_train/: test_progressive_training.py  test_train.py
