[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "network_generation"
version = "0.1.0"
description = "Network generation with meso-scale constraints"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=network_generation"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3 